# mesh_image_align

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: bag_to_raw.py  banana.xyz
utils/: MiscUtils.cpp  MiscUtils.h  PoseManipUtils.cpp  PoseManipUtils.h  RawFileIO.cpp  RawFileIO.h
utils/camodocal/include/camodocal/camera_models/: Camera.h
utils/camodocal/src/: stereo_calib.cc
utils/camodocal/src/camera_models/: CataCamera.cc  ScaramuzzaCamera.cc
